BAZEL-1968 [feature] Support JavacOptions from rules_kotlin
Merge-request: IJ-MR-162058
Merged-by: Lev Leontev <lev.leontev@jetbrains.com>

GitOrigin-RevId: 02bc1e9154dd7474792a780b7a3a7aab7a4eb312